<resources>
    <string name="app_name">Raptor</string>
    <!--menu 相关字符-->
    <string name="drawer_item_xingcheng">行程</string>
    <string name="drawer_item_qianbao">钱包</string>
    <string name="drawer_item_kefu">客服</string>
    <string name="drawer_item_settings">设置</string>
    <!--个人信息界面相关字符-->
    <string name="title_information">个人信息</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="age">年龄</string>
    <string name="number">电话</string>
    <string name="driver">车主认证</string>
    <string name="camera">拍照</string>
    <string name="photo">从手机相册选择</string>
    <string name="cancle">取消</string>

    <!--注册页面字符-->
    <string name="phone_number">手机号</string>
    <string name="password_login">密码</string>
    <string name="forget">忘记密码</string>
    <string name="login">登录</string>
    <string name="to_register">还没有账号？去注册吧</string>


    <!--设置界面字符-->
    <string name="setting_title">设置</string>
    <string name="Common_address">常用地址</string>
    <string name="update">版本更新</string>
    <string name="change">更改密码</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="voice">音效开关</string>
    <string name="security">账号与安全</string>
    <string name="journey">我的行程</string>
    <string name="guide">用户指南</string>
    <string name="clause">法律条款</string>
    <string name="register">注册</string>
    <string name="verification">验证码</string>
    <string name="send_verification">发送验证码</string>
    <string name="sex">性别</string>
    <string name="level">等级</string>
    <string name="profession">行业</string>
    <string name="company">公司-职业</string>
    <string name="want_to_go">你想去哪</string>
    <string name="editor">编辑</string>
    <string name="set_home_address">设置家庭地址</string>
    <string name="set_company_address">设置公司地址</string>
    <string name="help">帮助</string>
    <string name="product">产品</string>
    <string name="waiting">等待接驾</string>
    <string name="waitingForOrder">正在为您叫车，请稍候</string>
    <string name="wait_order_request">等待应答</string>
    <string name="more">更多</string>

</resources>
