<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="vertical">

    <TextView android:id="@+id/tv_photo"
              android:layout_width="350dp"
              android:layout_height="50dp"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:background="#458712"
              android:gravity="center"
              android:text="@string/photo"
              android:textSize="16sp"/>
    <TextView android:id="@+id/tv_camera"
              android:layout_width="350dp"
              android:layout_height="50dp"
              android:layout_alignStart="@+id/tv_photo"
              android:layout_below="@+id/tv_photo"
              android:background="#985677"
              android:gravity="center"

              android:text="@string/camera"
              android:textSize="16sp"/>
    <TextView android:id="@+id/tv_cancale_popwindow"
              android:layout_width="350dp"
              android:layout_height="50dp"
              android:background="#985677"
              android:gravity="center"
              android:text="@string/cancle"
              android:textSize="16sp"
              android:layout_alignParentBottom="true" android:layout_alignStart="@+id/tv_camera"/>


</RelativeLayout>