<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f0f0f0">
    <RelativeLayout
        android:id="@+id/relative_logo_activity"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <ImageView
            android:id="@+id/imgv_logo_activity"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#461589"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true" android:layout_below="@+id/relative_logo_activity"
        android:background="#fff" android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/imgv_number"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp" android:background="#659321"/>
            <EditText
                android:id="@+id/edit_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgv_number"
                android:background="@null"
                android:hint="@string/phone_number"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/imgv_password"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="#659321"/>
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgv_password"
                android:background="@null"
                android:hint="@string/password_login"/>
            <Button
                android:id="@+id/bt_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgv_password"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/imgv_password"
                android:background="#365498"
                android:text="@string/forget"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#935487"
        android:text="@string/login"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/to_register"
        android:textColor="#f00"
        android:textSize="16dp"/>
</RelativeLayout>