<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f0f0f0">
    <RelativeLayout
        android:id="@+id/relative_logo_activity"
        android:layout_width="match_parent"
        android:layout_height="222dp">
        <ImageView
            android:id="@+id/imgv_logo_activity"
            android:layout_width="64.6dp"
            android:layout_height="68.3dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/car_login"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relative_logo_activity"
        android:background="#fff"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/imgv_number"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/login_header"/>
            <EditText
                android:id="@+id/edit_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgv_number"
                android:background="@null"
                android:hint="@string/phone_number"
                android:textColorHint="#d3d3d3"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/imgv_password"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/login_password"/>
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgv_password"
                android:background="@null"
                android:hint="@string/password_login"
                android:textColorHint="#d3d3d3"/>
            <TextView
                android:id="@+id/bt_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgv_password"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/imgv_password"
                android:layout_marginRight="34dp"
                android:text="@string/forget"
                android:textColor="#ffbc00"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="#ffbc00"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="17sp"/>



    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/go_to_register"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/to_register"
        android:textColor="#ffbc00"
        android:textSize="16dp"/>
</RelativeLayout>