<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    tools:context="com.littlesparkle.growler.raptor.ui.activity.RegisterActivity">
    <RelativeLayout
        android:id="@+id/relative_logo_activity"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <ImageView
            android:id="@+id/imgv_logo_activity"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#461589"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relative_logo_activity"
        android:background="#fff"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/imgv_number"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp" android:background="#659321"/>
            <EditText
                android:id="@+id/edit_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgv_number"
                android:background="@null"
                android:hint="@string/phone_number"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/imgv_password"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="#659321"/>
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgv_password"
                android:background="@null"
                android:hint="@string/password_login"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/imgv_verification"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="#659321"/>
            <EditText
                android:id="@+id/edit_verification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgv_verification"
                android:background="@null"
                android:hint="@string/verification"/>
            <TextView
                android:id="@+id/send_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edit_verification"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:text="@string/send_verification"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="65dp"
        android:background="#935487" android:text="@string/register"
        android:textSize="20sp"
        android:layout_below="@+id/linearLayout" android:layout_centerHorizontal="true"/>
</RelativeLayout>
