<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    tools:context="com.littlesparkle.growler.raptor.ui.activity.AboutActivity">

    <RelativeLayout
        android:id="@+id/relative_title_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fafafa">
        <Button
            android:id="@+id/bt_back_about"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/tv_title_about"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bt_back"/>
        <TextView
            android:id="@+id/tv_title_about"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/about"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relative_title_about"
        android:layout_marginTop="25dp"
        android:background="#fff">

        <RelativeLayout
            android:id="@+id/relative_about_help"
            android:layout_width="match_parent"
            android:layout_height="56dp" android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="#252525"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/right_arrow"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relative_about_help"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/clause"
                android:textColor="#252525"
                android:textSize="14sp"/>
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/right_arrow"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/product"
                android:textColor="#252525"
                android:textSize="14sp"/>
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/right_arrow"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
